# app/Http/Resources/ZonaLiteResource.php
@@ -17,7 +17,7 @@ class ZonaLiteResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'nombre_zona' => $this->nombre_zona,
+            'nombre' => $this->nombre,
             'area' => $this->area,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
