# app/Http/Resources/ZonaResource.php
@@ -16,7 +16,7 @@ class ZonaResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'nombre_zona' => $this->nombre_zona,
+            'nombre' => $this->nombre,
             'area' => $this->area,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
